fix overflow poblem

--- a/src/pages/about/about.css
+++ b/src/pages/about/about.css
@@ -39,6 +39,10 @@
 .education-text p {
     text-align: justify; 
 }
+/* skills */
+.my-skills{
+    overflow-x: hidden;
+}
 .skills-row{
     min-height: 70vh;
 }
